[package]
name = "notar"
version = "0.1.0"
license = "MIT"
authors = ["Andres Correa Casablanca <castarco@coderspirit.xyz>"]
keywords = [ "git", "commits" ]
categories = [
  "command-line-utilities",
  "development-tools"
]
description = "Standardize commit messages"
repository = "https://github.com/Coder-Spirit/versioner.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
