[package]
name = "versioner"
version = "0.1.0"
license = "MIT"
authors = ["Andres Correa Casablanca <castarco@coderspirit.xyz>"]
keywords = [ "version", "versioning" ]
categories = [
  "command-line-utilities",
  "development-tools"
]
description = "Automate semantic version numbering"
repository = "https://github.com/Coder-Spirit/versioner.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
